--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@ body {
   height: 400px;
   width: 500px;
   border: 1px solid #ccc;
-  font: 16px/26px Georgia, Garamond, Serif;
+  font: 16px/26px "Montserrat", "Montserrat", sans-serif;
   overflow: auto;
   padding: 20px;
   background: #f5f5f5;
