Update server.js to redirect to /client.html

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,11 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+.card {
+    width: 100%;
+    height: auto;
+}
+
 #message {
   margin-top: 20px;
 }
